# Penguin

./: .gitignore  README.md  pyproject.toml
app_penguin/: penguin.py
app_penguin/scripts/: build.py  deploy.py  edit.py  mk_draft.py  mk_site.py  serve.py
penguin.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/penguin/: penguin.py
src/penguin/scripts/: build.py  deploy.py  edit.py  get_config.py
