[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "penguin"
version = "0.1.0"
description = "Generador de sitios estáticos"
authors = [{name = "Marco Aguirre"}]
dependencies = []

# aquí le decimos a pip qué función ejecutar al llamar 'penguin' desde la terminal
[project.scripts]
penguin = "app_penguin.penguin:main"

# incluir plantillas
[tool.setuptools.package-data]
app_penguin = ["templates/*.html", "templates/*.css"]

