[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "penguin"
version = "0.1.0"
description = "Static site generator written in Python"
authors = [
    {name = "Marco Aguirre"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[tool.setuptools.package.find]
where = ["src"]
# aquí le decimos a pip qué función ejecutar al llamar 'penguin' desde la terminal
[project.scripts]
penguin = "penguin.penguin:main"

# incluir plantillas
[tool.setuptools.package-data]
penguin = ["templates/*.html", "templates/*.css"]

